# Capstone_ProjectDE1

./: .gitignore  Custom Service Ticket Platform.md  Fake API Store  Makefile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
M1_Infraestructure/oldterraform/: main.tf  terraform.tfvars.example  variables.tf
M1_Infraestructure/terraform/: outputs.tf  variables.tf
M2_Orchestration/kestra/: docker-compose.yml
M3_DataWarehouse/: bigquery_config.json  🧱 3. ARQUITECTURA DATA WAREHOUSE (KIMBALL).mmd
M4_AnalyticsEngineering/claude/: csv_streaming_pipeline.yml  dbt_profiles.yml  dbt_project.yml  dim_category.sql  dim_product.sql  docker-compose.yml  fact_sales_support.sql  marts_schema.yml  staging_schema.yml  stg_products.sql  stg_tickets.sql  test_assert_all_categories_present.sql  test_assert_dim_product_20_rows.sql  test_assert_fact_not_empty.sql  test_assert_no_future_dates.sql  test_assert_no_orphan_tickets.sql  test_assert_satisfaction_avg.sql  (+2 more)
M5_Batch/: README.md
M6_Streaming/docs/: .py  (+2 more)
M7_Visualization/: MetabaseDashboard.md
complete_setup/: setup_zoomcamp.sh
complete_setup/zoomcamp_de/: Makefile  pyproject.toml
complete_setup/zoomcamp_de/complete flows/: csv_batch_pipeline.yml  csv_full_pipeline.yml  m5_batch_pipeline.yml  warehouse_pipeline.yml
complete_setup/zoomcamp_de/dbt/: .user.yml  Dockerfile
complete_setup/zoomcamp_de/dbt/capstone_bi/models/marts/: schema.yml
complete_setup/zoomcamp_de/dbt/capstone_bi/models/staging/: stg_tickets.sql
complete_setup/zoomcamp_de/terraform/: main.tf
docs/: Makefile  Starscheme.drawio
(+99 files in other folders)
